Removed "PLAINJSON" compile time option, replaced with "compress":<bool> parameter on incoming JSON requests. Documentation updated to reflect this. Added "subscribe":<bool> request parameter support to the "subscribe" action, allowing persistent websocket connections to subscribe/unsubscribe on the fly. Documentation updated to reflect this. Added mention of used software, including chart.js and zlib.js, thanks guys!

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,8 @@ function requestAverages(register, start, end, count)
 		'from': start,
 		'to': end,
 		'count': count,
-		'register': register
+                'register': register,
+                'compress': true
 	};
 
 	var json = JSON.stringify(pkt,null,2);
@@ -65,7 +66,8 @@ function requestHourly(register, start, end, count)
 		'from': start,
 		'to': end,
 		'count': count,
-		'register': register
+                'register': register,
+                'compress': true
 	};
 
 	var json = JSON.stringify(pkt,null,2);
